Fixes HG-563: Set word-wrap: break-word instead word-break: break-all;

--- a/assets/css/styles/main.css
+++ b/assets/css/styles/main.css
@@ -354,7 +354,7 @@ div.comment {
 .s-description {
 	font-size: 1.25rem;
 	word-spacing: -0.1rem;
-	word-break: break-all;
+	word-wrap: break-word;
 }
 .s-specinfo {
 	display: inline-block;
